2014-06-02 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: Attempt to fix bugs and inconsistencies
	reported by Lucas Sköldqvist.

2014-05-24 Jens Thoms Toerring    <jt@toerring.de>

	* lib.bitmaps/colorwheel.xpm: number of colors reduced since
	this bitmap alone was resposible for over a third of the size
	of the tar ball.

2014-05-23 Jens Thoms Toerring    <jt@toerring.de>

	* lib/goodie_colchooser.c: new goodie for picking arbitrary
	colors interactively added.

2014-05-23 Jens Thoms Toerring    <jt@toerring.de>

	* lib/positioner.c: major changes: range of values can now be
	controlled via a validation function. New functions for setting
	both alues at once and getting the current boundary settings.
	Drawing now is done differently (instead of XOR current background
	is stored and redrawn). Mouse is hidden while over positioner
	and active.

2014-05-22 Jens Thoms Toerring    <jt@toerring.de>

	* lib/positioner.c: step values are now also factored in
	when a new x- or y-value gets set by the user.

2014-05-14 Jens Thoms Toerring    <jt@toerring.de>

	* lib/spinner.c: Bug in handling of FL_FLOAT_SPINNER fixed.

2014-05-06 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xyplot.c: fl_set_xyplot_mouse_buttons() and
	fl_get_xyplot_mouse_buttons() added and clean-up of
	code to fix memory leaks.

2014-04-28 Jens Thoms Toerring    <jt@toerring.de>

	* lib/slider.c: Function for selecting mouse buttons added.
	* lib/input.c: Validator for dates improved

2014-04-26 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: Further bug fixes and code simplifications

2014-04-25 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: Bugs found by Lucas Sköldqvist in input
	objects (hopefully) fixed.

2014-04-12 Jens Thoms Toerring    <jt@toerring.de>

	* lib/fonts.c: Bug in font caching code, found by "Sunny",
	that could result in crashes fixed.

2014-03-27 Jens Thoms Toerring    <jt@toerring.de>

	* Some minor fixes for object label alignment
